# Intern-manager-agent

./: .gitignore  MCP.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
config/: config.py
src/: main.py  mcp_attendance.py  mcp_client.py  mcp_server.py
src/calendar/: attendance.py  exam_scheduler.py
src/config/: config.py
src/email/: email_handler.py
src/forms/: google_forms_handler.py
src/github/: github_analyzer.py
src/ranking/: applicant_ranker.py
